cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_193.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:147: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_enc.c:147:9: Write of unused value
145.           }
146.           l2n(xor0, iv);
147.           l2n(xor1, iv);
               ^
148.       }
149.       tin0 = tin1 = tout0 = tout1 = xor0 = xor1 = 0;
